Fix Full Width Layout Issues

--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
   <head>
     <meta charset="UTF-8" />
     <link rel="icon" type="image/svg+xml" href="/vite.svg" />
-    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0, user-scalable=no" />
     <meta name="description" content="Yusuf Umar Hanafi - Flutter Developer & iOS Developer crafting exceptional digital experiences" />
     <meta name="keywords" content="flutter developer, ios developer, mobile app developer, React, Node.js, portfolio" />
     <meta name="author" content="Yusuf Umar Hanafi" />
