--- a/index.html
+++ b/index.html
@@ -24,7 +24,7 @@
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Inter:wght@300;400;500;600;700;800;900&display=swap" rel="stylesheet">
     
-    <title>Yusuf Umar Hanafi - Flutter Developer</title>
+    <title>Let's #MeetUcup</title>
   </head>
   <body>
     <div id="root"></div>
